[project]
name = "cervical-cancer-cnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "colorama==0.4.6",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "filelock==3.13.1",
    "fonttools==4.58.4",
    "fsspec==2024.6.1",
    "huggingface-hub==0.33.0",
    "idna==3.10",
    "jinja2==3.1.4",
    "joblib==1.5.1",
    "kagglehub==0.3.12",
    "kiwisolver==1.4.8",
    "markupsafe==2.1.5",
    "matplotlib==3.10.3",
    "mpmath==1.3.0",
    "networkx==3.3",
    "numpy==2.3.0",
    "packaging==25.0",
    "pandas==2.3.0",
    "pillow==11.2.1",
    "ptflops==0.7.4",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "requests==2.32.4",
    "safetensors==0.5.3",
    "scikit-learn==1.7.0",
    "scipy==1.15.3",
    "six==1.17.0",
    "sympy==1.13.3",
    "threadpoolctl==3.6.0",
    "timm==1.0.16",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchvision>=0.24.0",
    "tqdm==4.67.1",
    "typing-extensions==4.12.2",
    "tzdata==2025.2",
    "urllib3==2.4.0",
]
